--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,31 @@ django:
   links:
     - redis
 
-#rq:
-#  build: .
-#  command: ./compose/run_celery.sh
-#  volumes:
-#    - .:/britten-psq
-#  links:
-#    - rabbitmq
-#    - redis
+rq:
+  build: .
+  command: ./compose/run_rq.sh
+  volumes:
+    - .:/django-rq
+  links:
+    - redis
+
+rqscheduler:
+  build: .
+  command: ./compose/run_rqscheduler.sh
+  volumes:
+    - .:/django-rq
+  links:
+    - redis
+
+# For dashboard w/o Flask:
+# pip install rq-dashboard==0.3.4
+# https://github.com/nvie/rq-dashboard/issues/99
+rqdashboard:
+  build: .
+  command: ./compose/run_rqdashboard.sh
+  ports:
+    - "9181:9181"
+  volumes:
+    - .:/django-rq
+  links:
+    - redis
