--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,19 @@
+arrow==0.7.0
 click==6.2
-Django==1.9.2
+Django==1.8
+django-rq==0.9.0
+django-rq-dashboard==0.2.9
+Flask==0.10.1
+itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
+python-dateutil==2.4.2
+pytz==2015.7
 redis==2.10.5
 rq==0.5.6
+rq-dashboard==0.3.4
+rq-scheduler==0.5.1
+simplejson==3.8.1
+six==1.10.0
+times==0.7
+Werkzeug==0.11.3
